<resources>
    <string name="app_name">简单记账</string>
    <string name="out">支出</string>
    <string name="in">收入</string>
    <string name="add_remark">添加备注</string>
    <string name="remark">备注</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="history_record">记录</string>
    <string name="history_search">搜索</string>
    <string name="account_info">图表</string>
    <string name="please_input_time">请输入时间(24小时制)</string>
    <string name="please_search_info">请输入搜索信息</string>
    <string name="date_empty">数据为空，无此类记录~~</string>
    <string name="chart_info">账单详情</string>

    <string name="about_app_info">应用信息</string>
    <string name="about_version">版本</string>
    <string name="about_1">1.0</string>
    <string name="about_app">关于应用</string>
    <string name="about_slogan">简单记账，记账从未如此简单！</string>
    <string name="about_developer">开发者</string>
    <string name="about_me">关于我</string>
    <string name="about_loc">郭睆（huàn）</string>
    <string name="about_email">联系邮箱</string>
    <string name="about_email2">781213930@qq.com</string>
    <string name="about_code">开源代码</string>
    <string name="about_code_info">https://github.com/guohuan78/easy_bookkepping</string>
    <string name="about_B">B站地址</string>
    <string name="about_B2">https://space.bilibili.com/518491096</string>

    <string name="history_info">本月账单记录</string>
    <string name="clear_all">清空所有记录</string>
    <string name="engel_coefficient">恩格尔系数计算</string>
    <string name="change_typename">更改类别名称</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="not_data">暂无数据</string>

    <string name="back">返回</string>
    <string name="calendar">日历</string>
    <string name="search">搜索</string>
    <string name="close">关闭</string>
    <string name="other">其他</string>
    <string name="comment">备注</string>
    <string name="more">更多</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="money">金额</string>

    <string name="colon">:</string>

    <string name="add_comment">添加备注</string>
</resources>
