<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@color/grey_f3f3f3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialog_more_btn_info"
            style="@style/dialogmoreStyle"
            android:drawableTop="@mipmap/it_charts"
            android:text="@string/account_info" />
        <Button
            android:id="@+id/dialog_more_btn_record"
            style="@style/dialogmoreStyle"
            android:drawableTop="@mipmap/it_bill"
            android:text="@string/history_record"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>
        <Button
            android:id="@+id/dialog_more_btn_search"
            style="@style/dialogmoreStyle"
            android:drawableTop="@mipmap/it_search"
            android:text="@string/history_search" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="3">
        <Button
            android:id="@+id/dialog_more_btn_setting"
            style="@style/dialogmoreStyle"
            android:drawableTop="@mipmap/it_settings"
            android:layout_marginEnd="15dp"
            android:text="@string/setting"/>
        <Button
            android:id="@+id/dialog_more_btn_about"
            style="@style/dialogmoreStyle"
            android:drawableTop="@mipmap/it_about"
            android:layout_marginEnd="15dp"
            android:text="@string/about"/>

    </LinearLayout>
    <ImageView
        android:id="@+id/dialog_more_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/it_close"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/close" />
</LinearLayout>