<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/setting_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/it_back"
            android:layout_marginStart="10dp"
            android:onClick="onClick"
            android:contentDescription="@string/back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_7D7D7D"/>
    <TextView
        android:id="@+id/setting_tv_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_all"
        android:onClick="onClick"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:background="@color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_7D7D7D"/>
    <TextView
        android:id="@+id/setting_tv_engel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/engel_coefficient"
        android:onClick="onClick"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:background="@color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_7D7D7D"/>
    <TextView
        android:id="@+id/setting_tv_change_typename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_typename"
        android:onClick="onClick"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:background="@color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_7D7D7D"/>
</LinearLayout>